--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Tarefas</title>
 </head>
 <body>
-    <h1>teste</h1>
+    {%for tarefa in tarefas %}
+    <table class="table table-hover table-dark">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Primeiro</th>
+            <th scope="col">Status</th>
+            <th scope="col">Data</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>{{ tarefa.nome }}</td>
+            <td>{{tarefa.status}}</td>
+            <td>{{tarefa.prazo}}
+            {% if tarefa.prazo < hoje %}
+            atrazado
+            {%endif%}
+            </td>
+          </tr>
+          </tr>
+        </tbody>
+      </table>
+    {% endfor %}
 </body>
 </html>
